--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,17 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title><%= htmlWebpackPlugin.options.title %></title>
     <script>
-      
+      const clientWidth = document.documentElement.clientWidth;
+      const clientHeight = document.documentElement.clientHeight;
+      window.pageWidth =
+        clientWidth / clientHeight > 16 / 9
+          ? clientHeight * (16 / 9)
+          : clientWidth;
+
+      const string = `<style>html{
+        font-size: ${window.pageWidth / 100}px 
+      }</style>`;
+      document.write(string);
     </script>
   </head>
   <body>
@@ -20,6 +30,5 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-    
   </body>
 </html>
